created css page. Took off the li's from the html page since it was hard coded to help us create the css. It will be generated in the JavaScript page. Loading will also be taken off eventually, and created in the JS, and will show up when actually loading.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         </header>
 
         <ul id="result" class="user-list">
-            <li>
+            <!-- Hard coded the li's to see it when creating the css. Will be created in the javascript code  -->
+            <!-- <li>
                 <img src="https://randomuser.me/api/portraits/women/33.jpg" alt="Sara">
                 <div class="user-info">
                     <h4>Sara Smith</h4>
@@ -36,7 +37,7 @@
                     <h4>Sara Smith</h4>
                     <p>Wexford, Ireland</p>
                 </div>
-            </li>
+            </li> -->
             <li>
                 <h3>Loading...</h3>
             </li>
